--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
-    "axios": "^1.6.2",
+    "@types/bcrypt": "^5.0.2",
+    "@types/next-auth": "^3.15.0",
+    "axios": "^1.6.3",
+    "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "^14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18"
   },
