--- a/package.json
+++ b/package.json
@@ -19,17 +19,25 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "html-react-parser": "^5.0.11",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-draft-wysiwyg": "^1.15.0",
+    "react-select": "^5.8.0",
+    "to": "^0.2.9"
   },
   "devDependencies": {
+    "@types/draftjs-to-html": "^0.8.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-draft-wysiwyg": "^1.13.8",
     "eslint": "^8",
     "eslint-config-next": "^14.0.4",
     "nodemon": "^3.0.2",
