--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.3",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.3.1",
     "dotenv": "^16.3.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
